--- a/Generate Leaflet map.ipynb
+++ b/Generate Leaflet map.ipynb
@@ -22,12 +22,12 @@
     "\n",
     "We select `Median total income in 2015 among recipients ($)` variable.\n",
     "\n",
-    "**To calculate %, divide it by Toronto value of 30,089** (taken from https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/prof/details/page.cfm?Lang=E&Geo1=CSD&Geo2=PR&Code2=01&SearchType=Begins&SearchPR=01&TABID=1&B1=All&type=0&Code1=3520005&SearchText=toronto)"
+    "**To calculate %, divide it by Toronto Census metro area value of 31,705** (taken from https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/prof/details/page.cfm?Lang=E&Geo1=CMACA&Code1=535&Geo2=PR&Code2=01&SearchText=toronto&SearchType=Begins&SearchPR=01&B1=All&TABID=1&type=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "census2016_income.to_csv('./census2016-income.csv', index=True)\n",
     "\n",
     "# Save income as percent into a separate file\n",
-    "round(census2016_income / 30089 * 100, 1).to_csv('./census2016-income-as-percent.csv', index=True)"
+    "round(census2016_income / 31705 * 100, 1).to_csv('./census2016-income-as-percent.csv', index=True)"
    ]
   },
   {
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.raster_layers.TileLayer at 0x11b67c310>"
+       "<folium.raster_layers.TileLayer at 0x11c19fb50>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.Choropleth at 0x11abaae50>"
+       "<folium.features.Choropleth at 0x11c24bb80>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.GeoJson at 0x11a204dc0>"
+       "<folium.features.GeoJson at 0x11c24baf0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,10 +291,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
