--- a/Generate Leaflet map.ipynb
+++ b/Generate Leaflet map.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "import folium"
    ]
   },
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.raster_layers.TileLayer at 0x11c19fb50>"
+       "<folium.raster_layers.TileLayer at 0x11f580130>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,15 +89,26 @@
     "m = folium.Map(\n",
     "    location=[43.6529, -79.3849],\n",
     "    tiles=None,\n",
-    "    zoom_start=12\n",
+    "    attr='<a href=\"https://github.com/metrohistory/toronto-cma-income-areas\">hello</a>',\n",
+    "    zoom_start=12,\n",
+    "    control_scale=True,\n",
     ")\n",
     "\n",
     "# Add CartoDB Positron baselayer\n",
-    "folium.TileLayer(\n",
+    "tiles = folium.TileLayer(\n",
     "    tiles='CartoDB positron',\n",
     "    control=False,\n",
-    "    zoom_start=12\n",
-    ").add_to(m)"
+    "    zoom_start=12,\n",
+    "    attr='hello',\n",
+    ")\n",
+    "\n",
+    "# Add link to GitHub repo to attribution\n",
+    "tiles.options['attribution'] = '{} | {}'.format(\n",
+    "    '<a href=\"https://github.com/metrohistory/toronto-cma-income-areas\">View sources and code</a>',\n",
+    "    tiles.options['attribution']\n",
+    ")\n",
+    "\n",
+    "tiles.add_to(m)"
    ]
   },
   {
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.Choropleth at 0x11c24bb80>"
+       "<folium.features.Choropleth at 0x11d6ae220>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +154,8 @@
     "income_choropleth = folium.Choropleth(\n",
     "    #geo_data=f'geodata/toronto-cma-tracts-2016-statcan-simplified.geojson',\n",
     "    geo_data=tracts,\n",
-    "    name='Income',\n",
-    "    bins=[40, 60, 80, 100, 120, 140, 180, 270],\n",
+    "    name='Income 2015',\n",
+    "    bins=[45, 60, 75, 90, 110, 150, 200, 270],\n",
     "    data=census2016_income_percent,\n",
     "    #columns=['Tract', 'Income'],\n",
     "    key_on='feature.properties.CTUID',\n",
@@ -153,7 +165,7 @@
     "    nan_fill_color='silver',\n",
     "    fill_opacity=0.7,\n",
     "    line_opacity=0.2,\n",
-    "    legend_name=\"Median Personal Income as % of Toronto\",\n",
+    "    legend_name=\"Median Personal Income as % of Toronto CMA, Census 2016\",\n",
     "    #overlay=True,\n",
     "    highlight=True\n",
     ")\n",
@@ -174,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.GeoJson at 0x11c24baf0>"
+       "<folium.features.GeoJson at 0x11c732760>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,6 +214,7 @@
     "    }\n",
     ").add_to(m)\n",
     "\n",
+    "\n",
     "# Etobicoke\n",
     "folium.GeoJson(\n",
     "    f'geodata/etobicoke-boundary-osm.geojson',\n",
@@ -214,17 +227,32 @@
     "    }\n",
     ").add_to(m)\n",
     "\n",
+    "\n",
+    "# York\n",
+    "folium.GeoJson(\n",
+    "    f'geodata/york-boundary-osm.geojson',\n",
+    "    name='York',\n",
+    "    style_function=lambda x: {\n",
+    "        'fillOpacity': 0,\n",
+    "        'color': 'magenta',\n",
+    "        'weight': '4',\n",
+    "        'interactive': False\n",
+    "    }\n",
+    ").add_to(m)\n",
+    "\n",
+    "\n",
     "# Forrest Hill\n",
     "folium.GeoJson(\n",
     "    f'geodata/forest-hill-boundary-1961-dli.geojson',\n",
     "    name='Forest Hill',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
-    "        'color': 'purple',\n",
+    "        'color': 'darkblue',\n",
     "        'weight': '4',\n",
     "        'interactive': False\n",
     "    }\n",
     ").add_to(m)\n",
+    "\n",
     "\n",
     "# Scarborough\n",
     "folium.GeoJson(\n",
@@ -233,18 +261,6 @@
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'green',\n",
-    "        'weight': '4',\n",
-    "        'interactive': False\n",
-    "    }\n",
-    ").add_to(m)\n",
-    "\n",
-    "# York\n",
-    "folium.GeoJson(\n",
-    "    f'geodata/york-boundary-osm.geojson',\n",
-    "    name='York',\n",
-    "    style_function=lambda x: {\n",
-    "        'fillOpacity': 0,\n",
-    "        'color': 'gray',\n",
     "        'weight': '4',\n",
     "        'interactive': False\n",
     "    }\n",
@@ -260,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,28 +293,27 @@
    "source": [
     "## Manual additions to the generated HTML map\n",
     "\n",
-    "#### To add lines to the legend with neighbourhoods boundaries\n",
+    "### 1. To add lines to the legend with neighbourhoods boundaries\n",
     "```js\n",
     "<span style='background:green;display:inline-block;vertical-align:middle;height:5px;width:25px;'></span>\n",
     "```\n",
     "\n",
-    "#### To keep choropleth underneath neighbourhood boundaries\n",
+    "### 2. To keep choropleth underneath neighbourhood boundaries\n",
     "```js\n",
     "choropleth_8926c1b6196e461e85cde667cbe9d1dd.on('add', function() {\n",
     "  this.bringToBack();\n",
     "}); \n",
+    "```\n",
+    "\n",
+    "### 3. Add white background to legend for readability\n",
+    "```html\n",
+    "<style>\n",
+    "    .legend.leaflet-control {\n",
+    "        background-color: white;\n",
+    "    }\n",
+    "</style>\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
