Add N indicator; LayerControl to bottomright; reorder choropleth legend elements

--- a/Generate Leaflet map.ipynb
+++ b/Generate Leaflet map.ipynb
@@ -55,10 +55,10 @@
     "census2016_income.Income = pd.to_numeric(census2016_income.Income, errors='coerce')\n",
     "\n",
     "# Save (small file size, acceptable for GitHub)\n",
-    "census2016_income.to_csv('./census2016-income.csv', index=True)\n",
+    "census2016_income.to_csv('census/census2016-income.csv', index=True)\n",
     "\n",
     "# Save income as percent into a separate file\n",
-    "round(census2016_income / 31705 * 100, 1).to_csv('./census2016-income-as-percent.csv', index=True)"
+    "round(census2016_income / 31705 * 100, 1).to_csv('census/census2016-income-as-percent.csv', index=True)"
    ]
   },
   {
@@ -89,7 +89,6 @@
     "m = folium.Map(\n",
     "    location=[43.6529, -79.3849],\n",
     "    tiles=None,\n",
-    "    attr='<a href=\"https://github.com/metrohistory/toronto-cma-income-areas\">hello</a>',\n",
     "    zoom_start=12,\n",
     "    control_scale=True,\n",
     ")\n",
@@ -99,7 +98,6 @@
     "    tiles='CartoDB positron',\n",
     "    control=False,\n",
     "    zoom_start=12,\n",
-    "    attr='hello',\n",
     ")\n",
     "\n",
     "# Add link to GitHub repo to attribution\n",
@@ -125,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Read income data file for choropleth\n",
-    "census2016_income_percent = pd.Series( pd.read_csv('./census2016-income-as-percent.csv', dtype={0: str}).set_index('Tract').Income )\n",
+    "census2016_income_percent = pd.Series( pd.read_csv('census/census2016-income-as-percent.csv', dtype={0: str}).set_index('Tract').Income )\n",
     "\n",
     "# Read census tracts GeoJSON\n",
     "tracts = gpd.read_file('geodata/toronto-cma-tracts-2016-statcan-simplified.geojson').filter(['CTUID', 'geometry'])\n",
@@ -281,7 +279,7 @@
    "outputs": [],
    "source": [
     "# Add layer control\n",
-    "folium.LayerControl(collapsed=False).add_to(m)\n",
+    "folium.LayerControl(collapsed=False, position='bottomright').add_to(m)\n",
     "\n",
     "# And all done!\n",
     "m.save('index.html')"
@@ -293,12 +291,12 @@
    "source": [
     "## Manual additions to the generated HTML map\n",
     "\n",
-    "### 1. To add lines to the legend with neighbourhoods boundaries\n",
+    "### 1. Add lines to the legend with neighbourhoods boundaries\n",
     "```js\n",
     "<span style='background:green;display:inline-block;vertical-align:middle;height:5px;width:25px;'></span>\n",
     "```\n",
     "\n",
-    "### 2. To keep choropleth underneath neighbourhood boundaries\n",
+    "### 2. Keep choropleth underneath neighbourhood boundaries always\n",
     "```js\n",
     "choropleth_8926c1b6196e461e85cde667cbe9d1dd.on('add', function() {\n",
     "  this.bringToBack();\n",
@@ -312,7 +310,21 @@
     "        background-color: white;\n",
     "    }\n",
     "</style>\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 4. Add North indicator\n",
+    "```js\n",
+    "var north = L.control({position: 'bottomleft'});\n",
+    "north.onAdd = function(map) {\n",
+    "    var div = L.DomUtil.create('div');\n",
+    "    div.innerHTML = '<img src=\"north.png\" style=\"height: 30px;\" alt=\"North indicator\" title=\"North indicator\">';\n",
+    "    return div;\n",
+    "}\n",
+    "north.addTo(map_9f8605217f1b408b83f4a098798ee48e);\n",
+    "```\n",
+    "\n",
+    "### 5. Manually swap text and numbers in choropleth legend\n",
+    "Requires some svg y-axis repositionings here and there."
    ]
   },
   {
