Add Toronto bounds pre-1966; dashed bounds

--- a/Generate Leaflet map.ipynb
+++ b/Generate Leaflet map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.raster_layers.TileLayer at 0x11f580130>"
+       "<folium.raster_layers.TileLayer at 0x12592d520>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add Choropleth"
+    "### Create Choropleth layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,28 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.Choropleth at 0x11d6ae220>"
+       "<folium.features.GeoJsonTooltip at 0x12980e160>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "income_choropleth = folium.Choropleth(\n",
-    "    #geo_data=f'geodata/toronto-cma-tracts-2016-statcan-simplified.geojson',\n",
     "    geo_data=tracts,\n",
-    "    name='Income 2015',\n",
+    "    name='Income 2015 for Toronto CMA',\n",
     "    bins=[45, 60, 75, 90, 110, 150, 200, 270],\n",
     "    data=census2016_income_percent,\n",
-    "    #columns=['Tract', 'Income'],\n",
     "    key_on='feature.properties.CTUID',\n",
     "    fill_color='RdBu',\n",
     "    line_weight=1,\n",
@@ -164,50 +162,64 @@
     "    fill_opacity=0.7,\n",
     "    line_opacity=0.2,\n",
     "    legend_name=\"Median Personal Income as % of Toronto CMA, Census 2016\",\n",
-    "    #overlay=True,\n",
     "    highlight=True\n",
     ")\n",
     "\n",
     "# Add Tooltip data\n",
-    "folium.GeoJsonTooltip(fields=['CTUID', 'Income'], aliases=['Census Tract', 'Income as %']).add_to(income_choropleth.geojson)\n",
-    "\n",
-    "# Add choropleth to the map\n",
-    "income_choropleth.add_to(m)"
+    "folium.GeoJsonTooltip(\n",
+    "    fields=['CTUID', 'Income'],\n",
+    "    aliases=['Census Tract', 'Income as %']\n",
+    ").add_to(income_choropleth.geojson)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add Toronto+neighborhood overlays"
+    "### Add all overlays in order, including Toronto, neighbourhoods, and chotopleth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.features.GeoJson at 0x11c732760>"
+       "<folium.features.Choropleth at 0x12980e7c0>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Toronto\n",
+    "# Toronto pre-1966\n",
     "folium.GeoJson(\n",
-    "    f'geodata/toronto-cma-boundary-2016-dli.geojson',\n",
-    "    name='Toronto',\n",
-    "    control=False,\n",
+    "    f'geodata/toronto-city-pre1966-osm-edit.geojson',\n",
+    "    name='City of Toronto pre-1966',\n",
+    "    control=True,\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'black',\n",
-    "        'weight': '1',\n",
+    "        'weight': '4',\n",
+    "        'dashArray': '8',\n",
+    "        'interactive': False\n",
+    "    }\n",
+    ").add_to(m)\n",
+    "\n",
+    "\n",
+    "# Toronto 1998-present\n",
+    "folium.GeoJson(\n",
+    "    f'geodata/toronto-boundary-2016-osm.geojson',\n",
+    "    name='Toronto 1998-present',\n",
+    "    control=True,\n",
+    "    style_function=lambda x: {\n",
+    "        'fillOpacity': 0,\n",
+    "        'color': 'black',\n",
+    "        'weight': '4',\n",
     "        'interactive': False\n",
     "    }\n",
     ").add_to(m)\n",
@@ -216,11 +228,12 @@
     "# Etobicoke\n",
     "folium.GeoJson(\n",
     "    f'geodata/etobicoke-boundary-osm.geojson',\n",
-    "    name='Etobicoke',\n",
+    "    name='Etobicoke pre-1966',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'orange',\n",
     "        'weight': '4',\n",
+    "        'dashArray': '8',\n",
     "        'interactive': False\n",
     "    }\n",
     ").add_to(m)\n",
@@ -229,11 +242,12 @@
     "# York\n",
     "folium.GeoJson(\n",
     "    f'geodata/york-boundary-osm.geojson',\n",
-    "    name='York',\n",
+    "    name='York pre-1966',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'magenta',\n",
     "        'weight': '4',\n",
+    "        'dashArray': '8',\n",
     "        'interactive': False\n",
     "    }\n",
     ").add_to(m)\n",
@@ -242,11 +256,12 @@
     "# Forrest Hill\n",
     "folium.GeoJson(\n",
     "    f'geodata/forest-hill-boundary-1961-dli.geojson',\n",
-    "    name='Forest Hill',\n",
+    "    name='Forest Hill pre-1966',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
-    "        'color': 'darkblue',\n",
+    "        'color': '#6600cc',\n",
     "        'weight': '4',\n",
+    "        'dashArray': '8',\n",
     "        'interactive': False\n",
     "    }\n",
     ").add_to(m)\n",
@@ -255,14 +270,35 @@
     "# Scarborough\n",
     "folium.GeoJson(\n",
     "    f'geodata/scarborough-boundary-osm.geojson',\n",
-    "    name='Scarborough',\n",
+    "    name='Scarborough pre-1966',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'green',\n",
     "        'weight': '4',\n",
+    "        'dashArray': '8',\n",
     "        'interactive': False\n",
     "    }\n",
-    ").add_to(m)"
+    ").add_to(m)\n",
+    "\n",
+    "\n",
+    "# Choropleth is not a layer but a FeatureGroup, so add thin black boundary to it\n",
+    "\n",
+    "# Toronto CMA\n",
+    "folium.GeoJson(\n",
+    "    f'geodata/toronto-cma-boundary-2016-dli.geojson',\n",
+    "    name='Toronto CMA',\n",
+    "    control=False,\n",
+    "    style_function=lambda x: {\n",
+    "        'fillOpacity': 0,\n",
+    "        'color': 'black',\n",
+    "        'weight': '1',\n",
+    "        'interactive': False\n",
+    "    }\n",
+    ").add_to(income_choropleth)\n",
+    "\n",
+    "\n",
+    "# Add choropleth to the map\n",
+    "income_choropleth.add_to(m)"
    ]
   },
   {
@@ -274,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +328,16 @@
     "## Manual additions to the generated HTML map\n",
     "\n",
     "### 1. Add lines to the legend with neighbourhoods boundaries\n",
-    "```js\n",
-    "<span style='background:green;display:inline-block;vertical-align:middle;height:5px;width:25px;'></span>\n",
+    "```html\n",
+    "<style>\n",
+    "  .line {\n",
+    "    display: inline-block;\n",
+    "    vertical-align: middle;\n",
+    "    width: 35px;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<span class='line' style='border-bottom: 4px dashed orange'></span>\n",
     "```\n",
     "\n",
     "### 2. Keep choropleth underneath neighbourhood boundaries always\n",
