changed "pre-1966" labels to (dissolved) in index.html and .ipynb

--- a/Generate Leaflet map.ipynb
+++ b/Generate Leaflet map.ipynb
@@ -199,7 +199,7 @@
     "# Toronto pre-1966\n",
     "folium.GeoJson(\n",
     "    f'geodata/toronto-city-pre1966-osm-edit.geojson',\n",
-    "    name='City of Toronto pre-1966',\n",
+    "    name='Old City of Toronto (dissolved)',\n",
     "    control=True,\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
@@ -228,7 +228,7 @@
     "# Etobicoke\n",
     "folium.GeoJson(\n",
     "    f'geodata/etobicoke-boundary-osm.geojson',\n",
-    "    name='Etobicoke pre-1966',\n",
+    "    name='Etobicoke (dissolved)',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'orange',\n",
@@ -242,7 +242,7 @@
     "# York\n",
     "folium.GeoJson(\n",
     "    f'geodata/york-boundary-osm.geojson',\n",
-    "    name='York pre-1966',\n",
+    "    name='York (dissolved)',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'magenta',\n",
@@ -256,7 +256,7 @@
     "# Forrest Hill\n",
     "folium.GeoJson(\n",
     "    f'geodata/forest-hill-boundary-1961-dli.geojson',\n",
-    "    name='Forest Hill pre-1966',\n",
+    "    name='Forest Hill (dissolved)',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': '#6600cc',\n",
@@ -270,7 +270,7 @@
     "# Scarborough\n",
     "folium.GeoJson(\n",
     "    f'geodata/scarborough-boundary-osm.geojson',\n",
-    "    name='Scarborough pre-1966',\n",
+    "    name='Scarborough (dissolved)',\n",
     "    style_function=lambda x: {\n",
     "        'fillOpacity': 0,\n",
     "        'color': 'green',\n",
@@ -381,9 +381,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.1 64-bit ('gis': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38164bitgiscondaf3b0cb5d1bf74b59a9777bd4a328c48a"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
